2008-10-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh (event_input_port): Added facilities to support C
	interface.

	* music/port.hh, port.cc (event_input_port::map): Take
	event_handler_global_index and event_handler_local_index instead
	of event_handler in second argument.

	* music/event.hh (event_handler_global_index,
	event_handler_local_index): New classes which replace
	event_handler.

	* music/port.hh, port.cc (insert_event): Replaced old method with
	two new, one with a second argument local_index, and an overloaded
	version with global_index.

	* music/index_map.hh (global_index, local_index): New classes.

2008-10-09  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/event_data.hh, music/message_data.hh: Removed.

	* music/event.hh (event_handler::operator ()): Made virtual and
	corrected arguments to adhere to RFC.

	* port.cc (event_output_port::insert_event): Send spikes to event
	router.

	* Makefile.am (libmusic_la_SOURCES): Added event_router.cc,
	music/event_router.hh

	* music/event_router, event_router.cc: New files.

2008-10-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* runtime.cc (runtime::runtime): Initialize my_communicator and
	schedule.

	* music/connector.hh, connector.cc: Connectors take over the role
	of subconnectors.

2008-10-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (event_output_port::insert_event): New method.

2008-09-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.cc (setup::setup): Compile use of MPI::Init_thread
	conditionally.

	* music-c.cc: #include <ctsring>.

2007-11-26  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (libmusic_la_SOURCES): Added music/spike_data.hh,
	spike_data.cc.

	* spike_data.cc: New file.

2007-11-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/spike_data.hh: New file.

	* music/setup.hh (setup::publish): Removed
	(setup::publish_input, setup::publish_output): New methods.
