@@ -1,5 +1,9 @@
 2008-10-10  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* music-c.h, music-c.cc (MUSIC_event_input_port_map_global_index,
+	MUSIC_event_input_port_map_local_index): Replacing
+	MUSIC_event_input_port_map.
+
 	* music/port.hh (event_input_port): Added facilities to support C
 	interface.
 
